feat: add user balance endpoint
